UI: Prevent overflow of message popup box by applying css word-break

--- a/structr-base/src/main/resources/structr/css/main.css
+++ b/structr-base/src/main/resources/structr/css/main.css
@@ -4383,6 +4383,9 @@ table.props td.__value {
 .whitespace-nowrap {
 	white-space: nowrap;
 }
+.break-word {
+	word-break: break-word;
+}
 .align-baseline {
 	vertical-align: baseline;
 }
